feat: Initial release of Rustium 🚀
Transform project to Rustium with Rust FFM offloading, lightweight Lithium-compatible AI & explosion optimizations, and complete GitHub preparations.